--- a/index.html
+++ b/index.html
@@ -23,18 +23,19 @@
                 </div>
             </div>
             <nav class="header-nav">
-                <a href="/about" class="header-nav__container">
-                    <div class="header-nav__container-substrate"></div>
-                    <div class="header-nav__container-card">
-                        <img src="./assets/icons/question.svg" />
-                    </div>
+                <a href="/game" id="navLinkGame" class="header-nav__container">
+                    <img src="./assets/icons/about.png" />
+                    <p class="header-nav__container-text">Play Game</p>
+                </a>
+                <a href="/about" id="navLinkAbout" class="header-nav__container">
+                    <img src="./assets/icons/about.png" />
                     <p class="header-nav__container-text">About Game</p>
                 </a>
-                <a href="/score" class="header-nav__container">
+                <a href="/score" id="navLinkStar" class="header-nav__container">
                     <img src="./assets/icons/star.svg" />
                     <p class="header-nav__container-text">Best Score</p>
                 </a>
-                <a href="/settings" class="header-nav__container">
+                <a href="/settings" id="navLinkSettings" class="header-nav__container">
                     <img src="./assets/icons/settings.svg" />
                     <p class="header-nav__container-text">Game Settings</p>
                 </a>
