compile ts into one file

--- a/index.html
+++ b/index.html
@@ -107,9 +107,6 @@
             <button class="result-btn" id="resultBtn">OK</button>
         </section>
 
-        <script type="module" src="./scripts/router.js"></script>
-        <script type="module" src="./ts-built/script.js"></script>
-        <script type="module" src="./ts-built/modals.js"></script>
-        <script type="module" src="./ts-built/variables.js"></script>
+        <script type="module" src="./ts-built/index.js"></script>
     </body>
 </html>
