--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
             <button class="result-btn" id="resultBtn">OK</button>
         </section>
 
-        <script type="module" src="./ts-built/index.js"></script>
+        <script type="module" src="./ts-built/modals.js"></script>
+        <script type="module" src="./ts-built/script.js"></script>
+        <script type="module" src="./ts-built/router.js"></script>
     </body>
 </html>
