--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
             <p class="result-text">
                 <span id="resultName" class="result-text"></span>, congratulations! You successfully found all matches on <span id="resultTime2" class="result-text__span">00:00</span> minutes.
             </p>
-            <button class="result-btn" id="resultBtn">OK</button>
+            <p class="result-text">Do you want to look at the score table?</p>
+            <div class="result-container">
+                <button class="result-btn" id="resultBtnNo">No</button>
+                <button class="result-btn" id="resultBtnYes">Yes</button>
+            </div>
         </section>
 
         <section id="relinkWindow" class="relink">
