--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                 <img src="./assets/icons/no-avatar.svg" />
             </div>
             <div class="register-footer">
-                <button class="register-footer__btn" id="registerAdd">Add user</button>
                 <button class="register-footer__btn" id="registerCancel">Cancel</button>
+                <button class="register-footer__btn" id="registerAdd">Add user</button>
             </div>
         </section>
 
@@ -106,7 +106,7 @@
             <p class="result-text">
                 <span id="resultName" class="result-text"></span>, congratulations! You successfully found all matches on <span id="resultTime2" class="result-text__span">00:00</span> minutes.
             </p>
-            <p class="result-text">Do you want to look at the score table?</p>
+            <p class="result-text result-text2">Do you want to look at the score table?</p>
             <div class="result-container">
                 <button class="result-btn" id="resultBtnNo">No</button>
                 <button class="result-btn" id="resultBtnYes">Yes</button>
@@ -121,8 +121,8 @@
             </div>
         </section>
 
-        <script type="module" src="./ts-built/modals.js"></script>
-        <script type="module" src="./ts-built/script.js"></script>
-        <script type="module" src="./ts-built/router.js"></script>
+        <script type="module" src="./ts-built/main/modals.js"></script>
+        <script type="module" src="./ts-built/main/script.js"></script>
+        <script type="module" src="./ts-built/utils/router.js"></script>
     </body>
 </html>
